--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
     }
+
+
+    //https://github.com/mockito/mockito/issues/2007
+    configurations.all {
+        resolutionStrategy.force 'org.objenesis:objenesis:2.6'
+    }
 }
 
 task clean(type: Delete) {
