--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,13 @@
 
     <application
         android:name=".App"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokePlexus">
         <activity
+            android:exported="true"
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.PokePlexus.NoActionBar">
