--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = "1.4.30"
-    ext.koin_version = "2.2.2"
-    ext.moshi_version = "1.9.3"
+    ext.kotlin_version = "1.5.31"
+    ext.koin_version = "3.1.3"
+    ext.moshi_version = "1.12.0"
     ext.retrofit_version = "2.9.0"
-    ext.okhttp_logging_interceptor_version= '4.2.2'
-    ext.paging_version = "3.0.0-beta01"
+    ext.okhttp_logging_interceptor_version= '4.9.0'
+    ext.paging_version = "3.1.0-rc01"
     ext.glide_version = "4.12.0"
     ext.pallete_glide_version = "2.1.2"
     ext.navigation_version = "2.3.0"
-    ext.room_version = "2.3.0-beta01"
-    ext.coroutines_test = '1.4.1'
+    ext.room_version = "2.4.0-beta01"
+    ext.coroutines_test = '1.4.3'
     ext.core_testing = '2.1.0'
     ext.mockk = "1.10.2"
-    ext.espresso = '3.3.0'
-    ext.test_runners = '1.3.0'
-    ext.fragment_testing = '1.3.0'
+    ext.espresso = '3.4.0'
+    ext.test_runners = '1.4.0'
+    ext.fragment_testing = '1.3.6'
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.koin:koin-gradle-plugin:$koin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -36,9 +36,10 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
+        jcenter()
     }
 
 
@@ -51,5 +52,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
-apply plugin: 'koin'
